fix(ui): set stack size for skill item icons